--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,15 @@
       <mat-icon>gamepad</mat-icon>
       Play
     </button>
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button (click)="onResetClick()" mat-menu-item>
+        <mat-icon>dialpad</mat-icon>
+        <span>Reset</span>
+      </button>
+    </mat-menu>
   </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
