--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="home">
+<mat-card class="example-card">
+  <img mat-card-image src="assets/img/100k1logo2.png" >
+  <mat-card-content>
+    <!--<p>
+      Праздничное издание игры 100 к 1
+    </p>-->
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button routerLink="/game">Начать игру 🚀</button>
+  </mat-card-actions>
+</mat-card>
+</div>
