--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -4,3 +4,22 @@
     <button *ngIf="!ans.completed"  mat-raised-button color="primary" >{{ ans.id }}</button>
   </div>
 </section>
+
+<br/>
+<br/>
+<div class="example-button-row">
+<mat-accordion>
+  <mat-expansion-panel (opened)="panelOpenState = true"
+                       (closed)="panelOpenState = false">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+
+      </mat-panel-title>
+
+    </mat-expansion-panel-header>
+    <p *ngFor="let othans of itemsService.getCurrentItem().other;">
+      {{othans}}
+    </p>
+  </mat-expansion-panel>
+</mat-accordion>
+</div>
